# telegram_assistant

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  autoresearch.checks.sh  autoresearch.jsonl  autoresearch.md  autoresearch.sh  config.example.yaml  config.yaml  docker-compose.yml  pyproject.toml  ruff.toml  type_checker.txt  userbot.session-journal
.pi/: AGENTS.md  settings.local.json
.pi/extensions/: hooks.json  run-hook.cmd  session-start.sh
docs/: DEPLOYMENT.md  PERFORMANCE_REPORT.md  tips_refactoring.md
docs/plans/: 2026-03-20-telegram-assistant-design.md  2026-03-20-telegram-assistant-implementation.md  2026-03-27-memory-tools.md  2026-03-30-private-channel-monitoring.md  2026-04-04-model-manager-investigation.md  2026-04-04-request-metrics-design.md  2026-04-04-telegraph-publishing-design.md  2026-04-04-telegraph-publishing-implementation.md
output/: data.json
output/markdown/: add-parameter.md  alternative-classes.md  change-bidirectional-to-unidirectional.md  change-reference-to-value.md  change-unidirectional-to-bidirectional.md  change-value-to-reference.md  collapse-hierarchy.md  comments.md  consolidate-conditional-expression.md  consolidate-duplicate-fragments.md  data-class.md  data-clumps.md  dead-code.md  decompose-conditional.md  divergent-change.md  duplicate-code.md  duplicate-observed-data.md  encapsulate-collection.md  encapsulate-field.md  extract-class.md  extract-interface.md  extract-method.md  extract-subclass.md  extract-superclass.md  extract-variable.md  feature-envy.md  form-template-method.md  hide-delegate.md  hide-method.md  how-to-refactor.md  inappropriate-intimacy.md  incomplete-library-class.md  inline-class.md  inline-method.md  inline-temp.md  introduce-assertion.md  introduce-foreign-method.md  (+70 more)
scripts/: auth_telethon.py  score_prompt.py
src/bot/: config.py  (+5 more)
tests/: test_channel_service.py  test_shared_decorators.py
(+174 files in other folders)
