[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-assistant"
version = "0.1.0"
description = "Personal Telegram bot with LLM, Obsidian vault, and channel monitoring"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.26.0",
    "telethon>=1.42.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyyaml>=6.0.3",
    "python-dotenv>=1.2.2",
    "aiofiles>=25.1.0",
    "aiosqlite>=0.22.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
telegram-assistant = "bot.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
